Fix message z-index stacking bug. Fixes #12.

--- a/views/sass/_messages.scss
+++ b/views/sass/_messages.scss
@@ -1,5 +1,6 @@
 .app-messages {
     position: absolute;
+    z-index: 10;
     width: 16em;
     top: 0;
     left: 50%;
